2008-06-30  dave

	* [r17] lib/Tie/Hash/FixedKeys.pm:
	  Fixed $VERSION.
	* [r16] Build.PL, lib/Tie/Hash/FixedKeys.pm:
	  Added LICENSE section (for CPANTS).

2006-06-01  dave

	* [r15] lib/Tie/Hash/FixedKeys.pm:
	  Added note about Hash::Util::lock_keys.

2005-10-22  dave

	* [r14] Build.PL:
	  Added Build.PL
	* [r13] Makefile.PL:
	  Removed Makefile.PL as it's autogenerated.
	* [r12] MANIFEST, lib/Tie/Hash/FixedKeys.pm, t/pod-coverage.t:
	  Added pod coverage tests.

2004-10-23  dave

	* [r11] lib/Tie/Hash/FixedKeys.pm, t/pod.t, t/test.t:
	  Improved test coverage.

2004-05-12  dave

	* [r10] COPYING, MANIFEST, Makefile.PL, README.xml:
	  Added various files to cvs
	* [r9] t, t/pod.t, t/test.t:
	  Added test programs.

2002-09-23  dave

	* [r8] lib/Tie/Hash/FixedKeys.pm:
	  Fixed to work under 5.8.0.

2002-07-12  dave

	* [r7] lib/Tie/Hash/FixedKeys.pm:
	  Corrected Attirbute::Handlers dependency

2001-12-09  dave

	* [r6] lib/Tie/Hash/FixedKeys.pm:
	  Added Attribute::Handlers interface.

2001-09-03  dave

	* [r5] lib/Tie/Hash/FixedKeys.pm:
	  Minor fixes.

2001-09-02  dave

	* [r4] lib/Tie/Hash/FixedKeys.pm:
	  Added RCS headers
	* [r3] lib/Tie/Hash/FixedKeys.pm:
	  Various fixes.

2001-08-21  dave

	* [r2] lib, lib/Tie, lib/Tie/Hash, lib/Tie/Hash/FixedKeys.pm:
	  Initial revision

2001-08-21  

	* [r1] .:
	  New repository initialized by cvs2svn.
